--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,4 @@
 services:
-  # main:
-  #   build: ./main
-  #   container_name: main
-  #   ports:
-  #     - "5000:5000"
-  #   networks:
-  #     - app-network
-  #   depends_on:
-  #     - redis
-  #     - kafka
-  #   environment:
-  #     - KAFKA_BROKER=kafka:9092  # Pointing to internal Kafka address for Docker network
 
   canvas:
     build: ./canvas
@@ -41,6 +29,8 @@ services:
     container_name: redis
     ports:
       - "6379:6379"
+    volumes:
+      - ./data/redis:/data/redis
     networks:
       - app-network
   
@@ -53,36 +43,6 @@ services:
       - app-network
     environment:
       - mongo_uri=mongodb+srv://tobiolajide01:Zi8w8X0bsvNQQOhA@cluster0.w6c3l.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-
-
-  # zookeeper:
-  #   image: confluentinc/cp-zookeeper:7.4.4
-  #   container_name: zookeeper
-  #   environment:
-  #     ZOOKEEPER_CLIENT_PORT: 2181
-  #     ZOOKEEPER_TICK_TIME: 2000
-  #   ports:
-  #     - "2181:2181"
-  #   networks:
-  #     - app-network
-  
-  # kafka:
-  #   image: confluentinc/cp-kafka:7.4.4
-  #   container_name: kafka
-  #   depends_on:
-  #     - zookeeper
-  #   ports:
-  #     - "9092:9092"  # Internal Docker network
-  #   environment:
-  #     KAFKA_BROKER_ID: 1
-  #     KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-  #     KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
-  #     KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
-  #     KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-  #     KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-  #     KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-  #   networks:
-  #     - app-network
 
 networks:
   app-network:
