--- a/canvas/Dockerfile
+++ b/canvas/Dockerfile
@@ -4,11 +4,11 @@ WORKDIR /app
 
 COPY requirements.txt .
 
-
+RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 
 COPY . .
 
-EXPOSE 5001
+EXPOSE 8000
 
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
