--- a/canvasfrontend/package.json
+++ b/canvasfrontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "lucide-react": "^0.509.0",
     "marked": "^15.0.11",
     "next": "15.3.2",
