fixed rendering issues

--- a/canvasfrontend/package.json
+++ b/canvasfrontend/package.json
@@ -16,13 +16,15 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
-    "remark-gfm": "^4.0.1"
+    "remark-gfm": "^4.0.1",
+    "reveal.js": "^5.2.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/reveal.js": "^5.0.5",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
